# penpot-operator

./: .custom_wordlist.txt  .gitignore  .licenserc.yaml  .trivyignore  .woke.yaml  CONTRIBUTING.md  README.md  charmcraft.yaml  config.yaml  index.html  pyproject.toml  requirements.txt  tox.ini  tox.toml
.github/: .jira_sync_config.yaml
.github/workflows/: bot_pr_approval.yaml  integration_test.yaml  load_test.yaml  publish_charm.yaml  test.yaml
205/: index.html
205/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
205/export/: influxDbData.txt  prometheusData.txt
205/history/: history-trend.json  history.json  retry-trend.json
205/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  summary.json
207/: index.html
207/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
207/export/: influxDbData.txt  prometheusData.txt
207/history/: categories-trend.json  history.json  retry-trend.json
207/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
208/: index.html
208/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
208/export/: influxDbData.txt  prometheusData.txt
208/history/: categories-trend.json  history.json
208/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  summary.json
209/: index.html
209/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
209/export/: influxDbData.txt  prometheusData.txt
209/history/: categories-trend.json  history-trend.json  retry-trend.json
209/widgets/: duration-trend.json  executors.json  severity.json  status-chart.json  summary.json
211/: index.html
211/export/: influxDbData.txt
211/history/: categories-trend.json  retry-trend.json
211/widgets/: duration-trend.json  executors.json  history-trend.json
215/: index.html
215/export/: influxDbData.txt
215/history/: categories-trend.json  duration-trend.json  retry-trend.json
215/widgets/: executors.json  history-trend.json
218/: index.html
218/export/: influxDbData.txt
218/history/: duration-trend.json  retry-trend.json
218/widgets/: categories-trend.json  executors.json  history-trend.json
223/: index.html
223/export/: influxDbData.txt
223/history/: categories-trend.json  duration-trend.json  history-trend.json
223/widgets/: executors.json  retry-trend.json
224/: index.html
224/export/: influxDbData.txt
224/history/: categories-trend.json  (+2 more)
225/: index.html
226/: index.html
227/: index.html
228/: index.html
232/: index.html
233/: index.html
234/: index.html
235/: index.html
236/: index.html
237/: index.html
238/: index.html
240/: index.html
243/: index.html
244/: index.html
253/: index.html
260/: index.html
267/: index.html
275/: index.html
286/: index.html
293/: index.html
310/: index.html
320/: index.html
332/: index.html
346/: index.html
355/: index.html
394/: index.html
432/: index.html
447/: index.html
451/: index.html
455/: index.html
456/: index.html
459/: index.html
481/: index.html
508/: index.html
520/: index.html
523/: index.html
542/: index.html
543/: index.html
docs/: changelog.md  index.md
penpot_rock/: rockcraft.yaml
src/: charm.py
tests/: conftest.py
(+857 files in other folders)
